--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "ꜱ ᴛ ᴏ ʀ ᴍ | 🥀",
+    "name": "N O  B  I | 🥀",
     "logo": "https://graph.org/file/7538e9f28bef5419e7fa7.jpg",
     "keywords": [
       "telegram",
